# codex

./: .codex.toml  .gitignore  .pre-commit-config.yaml  AI_FIRST_SCANNING_STRATEGY.md  ASTRAL_ARCHITECTURE.md  CHARMBRACELET_INTEGRATION_SPEC.md  CLAUDE.md  CONSISTENCY_FIXES.md  DATABASE_AUDIT.md  DATABASE_MIGRATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  ORGANIZATION_CLEANUP_REPORT.md  PATTERNS_UPDATE_SUMMARY.md  PATTERNS_V2_DOCUMENTATION.md  PORTABLE_TOOLS_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETTINGS_SOLUTION_SUMMARY.md  SQLITE_IMPLEMENTATION_COMPLETE.md  SQLITE_REPORTING_ARCHITECTURE.md  UNIFIED_ARCHITECTURE_PHILOSOPHY.md  UV_INTEGRATION_COMPLETE.md  VISION_SUMMARY.md  ai_query_interface.py  best_practices_scanner.py  broader_scope_scanner.py  cleanup_organization.sh  code_review_report.md  codex_patterns_v2_enhanced.json  complete_fixing_achievement.md  complete_modular_fixing_report.md  comprehensive_enhanced_patterns.json  comprehensive_fixer.py  comprehensive_patterns_v3.json  demo_ai_workflow.py  demo_full_implementation.py  demo_negative_space_integration.py  detailed_violation_scanner.py  (+50 more)
.codex/: .gitignore  README.md  config.toml
codex/: __init__.py  ai_query.py  ai_sqlite_query.py  batch_fixer.py  cli.py  client.py  code_review_agent.py  config.py  config_cli.py  console_types.py  database.py  database_OLD.py  ensemble_integration.py  ensemble_scanner.py  exceptions.py  fix_audit_trail.py  fix_context_analyzer.py  fix_orchestrator.py  fix_validation_rules.py  fts_database.py  gitignore_handler.py  improved_scanner.py  interactive_fixer.py  linting_8020_patterns.py  mcp_server.py  models.py  negative_space_patterns.py  organization_scanner.py  pattern_cli.py  pattern_extractor.py  pattern_importer.py  pattern_models.py  portable_tools.py  project_config.py  python_env_enforcer.py  recommendation_engine.py  rules_cli.py  safe_fixer.py  scan_cli.py  scan_context.py  (+14 more)
codex/data/: README.md  __init__.py  default_patterns.py  negative_space_patterns.json  patterns_backup.json
codex/rules/: __init__.py  categories.py  database_rules.py  loader.py  registry.py  settings_rules.py
codex_backup_20250819_185515/: cli.py  config.py  fts_database_OLD.py  gitignore_handler.py  pattern_cli.py  pattern_extractor.py  pattern_importer.py  pattern_models.py  portable_tools.py  project_config.py  rules_cli.py  scan_cli.py  scanner.py  sqlite_scanner.py  tools.py  unified_database.py  uv_check.py
codex_backup_20250819_185515/data/: __init__.py  default_patterns.py  patterns_backup.json
codex_backup_20250819_185515/rules/: __init__.py  settings_rules.py
config/: claude_desktop_config.json  codex-mcp.service  com.codex.mcp-server.plist
data/: codex_patterns_v2_enhanced.json  comprehensive_enhanced_patterns.json  comprehensive_patterns_v3.json  enhanced_patterns.json  patterns_from_project_init_v2.json
demo_repository/: README.md  client.py  requirements.txt  server.py  utils.py
docs/: AI_COMMAND_REFERENCE.md  AI_FIRST_SCANNING_STRATEGY.md  ASTRAL_ARCHITECTURE.md  CHARMBRACELET_INTEGRATION_SPEC.md  CLAUDE.md  CONSISTENCY_FIXES.md  DATABASE_AUDIT.md  DATABASE_MIGRATION_COMPLETE.md  EXAMPLES.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  PATTERNS_UPDATE_SUMMARY.md  PATTERNS_V2_DOCUMENTATION.md  PORTABLE_TOOLS_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETTINGS_SOLUTION_SUMMARY.md  SQLITE_IMPLEMENTATION_COMPLETE.md  SQLITE_REPORTING_ARCHITECTURE.md  UNIFIED_ARCHITECTURE_PHILOSOPHY.md  UV_INTEGRATION_COMPLETE.md  VISION_SUMMARY.md  architecture.md  clarifying-questions.md  complete_fixing_achievement.md  complete_modular_fixing_report.md  exclusion-settings-guide.md  exclusion-strategy.md  features.md  final-architecture.md  heimdall.md  intelligence_tool_collaboration_model.md  modular_fixing_success.md  multi-factor-analysis.md  negative_space_methodology.md  overview.md  project_init_integration_success.md  refined-questions.md  revised-architecture.md  scan-tracking-report.md  (+9 more)
examples/: demo_ai_workflow.py  demo_full_implementation.py  demo_negative_space_integration.py
experiments/: best_practices_scanner.py  broader_scope_scanner.py  comprehensive_fixer.py  detailed_violation_scanner.py  enhanced_intelligent_scanner.py  final_intelligent_scanner.py  intelligent_fixer.py  intelligent_scanner.py  negative_space_analyzer.py  pattern_enhancement_analyzer.py  simple_fixer.py  simple_scanner.py  smart_scanner.py  violation_analyzer.py
fixers/: __init__.py  external_tools_fixer.py  fixer_orchestrator.py  hardcoded_paths_fixer.py  import_consolidation_fixer.py  print_to_logging_fixer.py  remaining_issues_fixer.py
quality_enforcement_backup_20250819_194047/: cli.py  fts_database_OLD.py  gitignore_handler.py  models.py  pattern_extractor.py  pattern_importer.py  pattern_models.py  rules_cli.py  scan_registry.py  scan_rules.py  settings.py  tools.py  unified_database.py  uv_check.py
quality_enforcement_backup_20250819_194047/data/: default_patterns.py
quality_enforcement_backup_20250819_194047/rules/: registry.py
quality_enforcement_backup_20250819_200552/: database_DEPRECATED.py  pattern_cli.py  project_config.py  scanner.py
quality_enforcement_backup_20250819_200552/rules/: database_rules.py
scripts/: ai_query_interface.py  check_organization.py  enhanced_pattern_extractor.py  evolution_tracker.py  experiment_fts.py  extract_comprehensive_patterns.py  import_patterns_to_sqlite.py  import_patterns_unified.py  pattern_refiner.py  startup_wrapper.sh  systematic_quality_enforcer.py  update_patterns_from_project_init.py
scripts/utilities/: populate_comprehensive_ensemble_rules.py  validate_violations.py
src/: main.py
test-project/: sample.py
test-project/.codex/: config.toml
tests/: test_cli_commands.py  test_dogfooding.py  test_fts_direct.py  test_implementation.py  test_mcp_protocol.py  test_quick_mcp.py  test_safe_fixing.py  test_sqlite_core.py  test_sqlite_scanning.py  test_startup.py
