[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex"
version = "0.1.0"
description = "Universal code generation platform with pattern-based best practices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.25",
    "cookiecutter>=2.6",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "toml>=0.10.2",
    "mcp>=1.0.0",
    "logfire>=0.1.0",
    "greenlet>=3.2.4",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1"
]

[project.scripts]
codex = "codex.cli:cli"

[tool.setuptools]
packages = ["codex"]

[tool.setuptools.package-data]
codex = ["data/*.md"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
required-version = ">=0.8.0"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "ARG", "TCH", "RUF", "PL", "TRY", "FLY", "PERF", "LOG"]
ignore = [
    "E501",     # Line too long - we use 120 char limit
    "B008",     # Function calls in argument defaults
    "TRY003",   # Long exception messages
    "PLR0913",  # Too many arguments
    "ARG002",   # Unused arguments (often needed for interfaces)
    "SIM105",   # Use contextlib.suppress (readability preference)
    "PLR2004",  # Magic values (constants not always needed)
]
fixable = ["F401", "I", "UP", "RUF100", "RUF022"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"tests/*.py" = ["ARG", "PLR2004", "S101"]

[tool.mypy]
python_version = "3.11"
# Start with minimal checks - 80/20 rule
ignore_missing_imports = true
allow_untyped_defs = true
allow_untyped_calls = true
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
no_implicit_optional = true
show_error_codes = true

# Critical paths - Type check these strictly
[[tool.mypy.overrides]]
module = [
    "codex.models",
    "codex.pattern_models",
    "codex.database",
    "codex.config",
]
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true

# Non-critical paths - Ignore errors for now
[[tool.mypy.overrides]]
module = [
    "codex.cli",
    "codex.tools",
    "codex.portable_tools",
    "codex.fix_*",
    "codex.scan_*",
    "codex.interactive_*",
    "codex.batch_*",
    "codex.violation_*",
]
ignore_errors = true

# Test files - No type checking needed
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Experimental code - No type checking
[[tool.mypy.overrides]]
module = "experiments.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
